fix: no wrap "more" link 阅读全文链接不换行
Close #14

--- a/themes/Yilia/source/css/_partial/article.styl
+++ b/themes/Yilia/source/css/_partial/article.styl
@@ -316,7 +316,7 @@ body {
 
 .article-more-link{
   margin-top: 5px;
-  text-align: right;
+  float: right;
   a{
     background: #4d4d4d;
     color: #fff;
